--- a/web-principal & Admin/register.html
+++ b/web-principal & Admin/register.html
@@ -146,7 +146,7 @@ submit.addEventListener('click',  async (e) => {
             SchoolID: "School/"+user.uid+"/",
                 });
                 signForm.reset();
-                window.location.href="principalHomePage.php";
+                window.location.href="principalHomePage.html";
 
       
       }) 
