--- a/web-principal & Admin/register.html
+++ b/web-principal & Admin/register.html
@@ -238,6 +238,11 @@ submit.addEventListener('click',  async (e) => {
      document.getElementById("emailInp").focus();
      return false;
     }
+
+    if(password.value.length < 6) {  
+    alert(" لا يمكن لكلمة السر أن تكون أقل من ٦ أحرف أو أرقام ");
+     return false;  
+  }  
    
     else {
       return true;
