--- a/web-principal & Admin/resetPassword.html
+++ b/web-principal & Admin/resetPassword.html
@@ -11,7 +11,7 @@
 <body>
     <div class="center">
         <h1 class=""> إعادة تعيين كلمة السر</h1>
-        <form id="logIn">
+        <form id="reset">
          <div class="inputbox">
             <span> يرجى إدخال البريد الإلكتروني الخاص بالحساب </span>
         </div>
@@ -28,7 +28,7 @@
     </div>
 
     <script type="module">
-         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-app.js";
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-app.js";
         import { getAuth, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js";
         import { getFirestore } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-firestore.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-analytics.js";
@@ -47,17 +47,25 @@
 
            const Email=document.getElementById("emailInp");
            const submit=document.getElementById("subButton");
+           const resetForm=document.getElementById("reset");
 
            const auth = getAuth();
-        sendPasswordResetEmail(auth, Email)
-       .then(() => {
-         alert("تم إرسال بريد إلكتروني لإعادة تعيين كلمة المرور");
-        })
-        .catch((error) => {
-          const errorCode = error.code;
-          const errorMessage = error.message;
-    // ..
+           submit.addEventListener('click',  async (e) => {
+         e.preventDefault()
+         sendPasswordResetEmail(auth, Email.value)
+         .then(() => {
+           alert("تم إرسال بريد إلكتروني لإعادة تعيين كلمة المرور");
+           resetForm.reset();
+
+          })
+          .catch((error) => {
+             alert(error.message);
+             const errorCode = error.code;
+             const errorMessage = error.message;
        });
+    });
+    
+
 
     </script>
 
