--- a/web-principal & Admin/adminHomePage.html
+++ b/web-principal & Admin/adminHomePage.html
@@ -2,20 +2,19 @@
 
 <script type='module'>
 import { viewTachersAndClasses  } from './admin.js';
-import { getAuth, onAuthStateChanges } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js";
+import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js";
  const auth = getAuth();
- const user= auth.currentUser
-    onAuthStateChanges(auth, (user)=>{
+ const user= auth.currentUser;
+    onAuthStateChanged(auth, (user)=>{
         if(user){
             const uid=user.uid;
-     document.getElementsByTagName('body').onload = viewTachersAndClasses(uid); 
-     console.log("the same user");
+            document.getElementsByTagName('body').onload = viewTachersAndClasses(uid);
+            console.log("the same user");
         }
         else{
             window.location.href="index.html";
             console.log("the  user changed");
         }
-
     })
    
    </script>
