--- a/web-principal & Admin/adminHomePage.html
+++ b/web-principal & Admin/adminHomePage.html
@@ -2,10 +2,10 @@
 
 <script type='module'>
 import { viewTachersAndClasses  } from './admin.js';
-import { getAuth, onAuthStateChanges } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js";
+import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js";
  const auth = getAuth();
  const user= auth.currentUser
-    onAuthStateChanges(auth, (user)=>{
+    onAuthStateChanged(auth, (user)=>{
         if(user){
             const uid=user.uid;
      document.getElementsByTagName('body').onload = viewTachersAndClasses(uid); 
