--- a/web-principal & Admin/adminHomePage.html
+++ b/web-principal & Admin/adminHomePage.html
@@ -38,7 +38,7 @@ import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css" integrity="sha256-3sPp8BkKUE7QyPSl6VfBByBroQbKxKG7tsusY2mhbVY=" crossorigin="anonymous" />
    
     <script type="module"src="admin.js"></script>
-
+<!--- <script  src="logout.js"></script> -->
 
     <title>Document</title>
 </head>
