--- a/web-principal & Admin/index.html
+++ b/web-principal & Admin/index.html
@@ -25,7 +25,7 @@
             <span>كلمة السر</span>
           </div>
           <div class="inputbox">
-          <span for="userType" class="mb-3">:اختر نوع المستخدم</span>
+          <span for="userType" >:اختر نوع المستخدم</span>
          <select name="userType" id="userType">
            <option value="princapl">مدير</option>
            <option value="admin">إداري</option>
@@ -93,6 +93,7 @@
                alert("لا يوجد مدير بهذه البيانات يرجى التحقق من البيانات المدخلة");
                logInform.reset();
             }
+           
             }
             
             if ((userType.value=="admin")){
@@ -111,7 +112,7 @@
           // Signed in 
            const user = userCredential.user;
            alert("userlogedin");
-           if(userType.value=="principal"){
+           if(document.getElementById("userType").value=="princapl"){
             window.location.href="principalHomePage.html";
            }
            else if(userType.value=="admin"){
