--- a/web-principal & Admin/adminHomePage.html
+++ b/web-principal & Admin/adminHomePage.html
@@ -90,7 +90,7 @@ import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/
 <!-- HTML !-->
 
 
-                        <button class="button-36 topTitle" onclick="location.href='class.php'"  >إضافة صف</button>
+                        <button class="button-36 topTitle" onclick="location.href='class.php'"  >إضافة فصل</button>
                         <div class="loader topTitle"></div>
                         
 
