--- a/web-principal & Admin/principalHomePage.html
+++ b/web-principal & Admin/principalHomePage.html
@@ -7,6 +7,7 @@ import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/
     onAuthStateChanged(auth, (user)=>{
         if(user){
             const uid=user.uid;
+            alert(uid);
             document.getElementsByTagName('body').onload = callAdmins(uid);
             console.log("the same user");
         }
@@ -19,8 +20,8 @@ import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/
 
 
    
-
-    const logout= document.getElementsById("signOut");
+/*
+    const logout= document.getElementById("signOut");
 
     logout.addEventListener('click',  async (e) => {
       alert("lohhh");
@@ -32,7 +33,7 @@ import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/
         console.log(error.message);
         }); 
 
-     })
+     }) */
 </script>
 
 
