--- a/web-principal & Admin/principalHomePage.html
+++ b/web-principal & Admin/principalHomePage.html
@@ -21,7 +21,7 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
 
    
 
-    const logout= document.getElementById("signOut");
+    const logout= document.getElementById("signout");
 
     logout.addEventListener('click',  async (e) => {
       alert("lohhh");
