--- a/web-principal & Admin/index.html
+++ b/web-principal & Admin/index.html
@@ -113,7 +113,7 @@
           // Signed in 
            const user = userCredential.user;
            alert("userlogedin");
-           if(document.getElementById("userType").value=="princapl"){
+           if(document.getElementById("userType").value=="principal"){
             window.location.href="principalHomePage.html";
            }
            else if(userType.value=="admin"){
