add class and student update

--- a/web-principal & Admin/addStudent.html
+++ b/web-principal & Admin/addStudent.html
@@ -44,7 +44,7 @@
                 <option id="non" value="" name="non">--اختر الفصل--</option>
                 </select>
                 <span
-                    style="border: 2px solid #000; width:40%;  text-align:center; border-radius: 10px; font-size: 1.2em; position: absolute; ">الفصل</span>
+                    style=" width:40%;  text-align:center; border-radius: 10px; font-size: 1.2em; position: absolute; ">الفصل</span>
             </div>
             <h3>معلومات ولي أمر الطالب</h3>
            
