--- a/web-principal & Admin/class.html
+++ b/web-principal & Admin/class.html
@@ -1,15 +1,5 @@
 <!DOCTYPE html>
-<?php
-echo "<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>";
-$_GET['pid'] = 'POTur2qxIKmSafOghaFn';
-$pid = $_GET['pid'];
-echo "<script type='module'>import { addClass } from './class.js';
-document.getElementById('btn').onclick = function() {
-  addClass('$pid');
-}
-</script>";
 
-?>
 
 <html lang="en">
 
@@ -20,7 +10,7 @@ document.getElementById('btn').onclick = function() {
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
-
+    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
 </head>
 
 <body>
@@ -42,7 +32,7 @@ document.getElementById('btn').onclick = function() {
                 <option id="non" value="" name="non">--مستوى الطالب--</option>
                 </select>
                 <span
-                    style="border: 2px solid #000; width:40%;  text-align:center; border-radius: 10px; font-size: 1.2em; position: absolute; ">المستوى</span>
+                    style=" width:40%;  text-align:center; border-radius: 10px; font-size: 1.2em; position: absolute; ">المستوى</span>
             </div>
 
             <div class="inputbox">
