--- a/web-principal & Admin/adminHomePage.html
+++ b/web-principal & Admin/adminHomePage.html
@@ -146,8 +146,10 @@ import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/
             </div>
 
             </div>
-
+            <div class="bg"></div>
+            <div class="bg bg2"></div>
+            <div class="bg bg3"></div>
             <script src="navbar.js"></script>
-
+        
 </body>
 </html>
