--- a/web-principal & Admin/register.html
+++ b/web-principal & Admin/register.html
@@ -54,7 +54,13 @@
 
   </div>
 
-
+  <div class="screen__background">
+    <span class="screen__background__shape screen__background__shape5"></span>
+    <span class="screen__background__shape screen__background__shape4"></span>
+    <span class="screen__background__shape screen__background__shape3"></span>		
+    <span class="screen__background__shape screen__background__shape2"></span>
+    <span class="screen__background__shape screen__background__shape1"></span>
+  </div>
 
 
 
