--- a/web-principal & Admin/addAdmin.html
+++ b/web-principal & Admin/addAdmin.html
@@ -8,19 +8,20 @@
     <link rel="stylesheet" href="create.css">
     <script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
     <script type="module" src="addAdmin.js"></script>
+
     <title>إضافة إداري</title>
 </head>
 
-<body>
 
+<body>
 
 <div class="center">
   <h1>إضافة إداري</h1>
 
   <form class="addAdmin" id="modal-signup">
-
+   
   <div class="inputbox">
-      <input type="text" required="required" name ="firstName" id="firstName">
+      <input type="text" name ="firstName" id="firstName">
       <span>الاسم الأول</span>
     </div>
 
@@ -35,32 +36,24 @@
       <span>البريد الإلكتروني</span>
     </div>
 
+  <div class="inputbox">
+    <span class="req">جميع الحقول مطلوبة*</span>
+  </div>
+
 
 
     <div class="inputbox">
-    <button  type="submit"  class="btn" id="reg-btn" >إضافة</button>
+    <button  type="submit"  class="button-36 topTitle" id="reg-btn" >إضافة</button>
     </div>
+
+
+<div class="inputbox">
+  <button class="button-36 topTitle" onclick="location.href='addAdmins.html'"  >إضافة قائمة إداريون</button>
+  </div>
+
   </form>
 </div>
 
-
-
-<!-- add adminS -->
-<div class="center">
-        <h1 class="text-center mt-4 mb-4">إضافة قائمة من الإداريون</h1>
-        <div class="card">
-            <div class="card-header"><b>اختر ملف اكسل</b></div>
-            <div class="card-body">
-                <input type="file" id="excel_file" />
-            </div>
-        </div>
-        <div id="excel_data" class="mt-5"></div>
-        <div class="inputbox">
-        <div class="inputbox">
-    </div>
-
-    </div>
-    </div>
 
 </body>
 </html>
