--- a/web-principal & Admin/addTeacher.html
+++ b/web-principal & Admin/addTeacher.html
@@ -33,8 +33,18 @@
 
 
     <div class="inputbox">
+      <span class="req">جميع الحقول مطلوبة*</span>
+    </div>
+
+    <div class="inputbox">
     <button  type="submit"  class="btn" id="reg-btn" >إضافة</button>
     </div>
+
+
+  <div class="inputbox">
+  <button class="button-36 topTitle" onclick="location.href='addTeacherS.html'"  >إضافة قائمة معلمون</button>
+  </div>
+
   </form>
 </div>
 
