--- a/web-principal & Admin/addStudents.html
+++ b/web-principal & Admin/addStudents.html
@@ -31,7 +31,32 @@
 
     </div>
     </div>
+    <div class="screen__background">
+        <div class="screen__background__shape screen__background__shape7"></div>
+        <div class="screen__background__shape screen__background__shape5"></div>
+        <div class="screen__background__shape screen__background__shape4"></div>
+        <div class="screen__background__shape screen__background__shape3"></div>		
+        <div class="screen__background__shape screen__background__shape2"></div>
+        <div class="screen__background__shape screen__background__shape1"></div>
+      </div>
 
+      <style>
+        .screen__background__shape {
+	transform: rotate(45deg);
+	position: absolute;
+}
+
+
+.screen__background__shape4 {
+	height: 400px;
+	width: 200px;
+  background: linear-gradient(45deg,#b9bebd  25%, #4bcacf 100%);		
+	top: 300px;
+	left: 700px;	
+    z-index: -1;
+	border-radius: 60px;
+}
+</style>
 </body>
 </html>
 
