--- a/web-principal & Admin/adminHomePage.html
+++ b/web-principal & Admin/adminHomePage.html
@@ -146,9 +146,13 @@ import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/
             </div>
 
             </div>
-            <div class="bg"></div>
-            <div class="bg bg2"></div>
-            <div class="bg bg3"></div>
+            <div class="screen__background">
+       
+                <div class="screen__background__shape screen__background__shape4"></div>
+                <div class="screen__background__shape screen__background__shape3"></div>		
+                <div class="screen__background__shape screen__background__shape2"></div>
+                <div class="screen__background__shape screen__background__shape1"></div>
+              </div>
             <script src="navbar.js"></script>
         
 </body>
