--- a/web-principal & Admin/principalHomePage.html
+++ b/web-principal & Admin/principalHomePage.html
@@ -74,13 +74,15 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
     <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <i class="fas fa-bars text-white"></i>
     </button>
+    <div class="screen__background__shape screen__background__shape1"></div>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
             <li class="nav-item active">
                 <a class="nav-link" href="principalHomePage.html">الصفحة الرئيسية</a>
             </li>
-        
+
 
         </ul>
     </div>
@@ -130,11 +132,11 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css" integrity="sha256-3sPp8BkKUE7QyPSl6VfBByBroQbKxKG7tsusY2mhbVY=" crossorigin="anonymous" />
   
     <div class="screen__background">
-        <span class="screen__background__shape screen__background__shape5"></span>
-        <span class="screen__background__shape screen__background__shape4"></span>
-        <span class="screen__background__shape screen__background__shape3"></span>		
-        <span class="screen__background__shape screen__background__shape2"></span>
-        <span class="screen__background__shape screen__background__shape1"></span>
+       
+        <div class="screen__background__shape screen__background__shape4"></div>
+        <div class="screen__background__shape screen__background__shape3"></div>		
+        <div class="screen__background__shape screen__background__shape2"></div>
+        <div class="screen__background__shape screen__background__shape1"></div>
       </div>
 </body>
 </html>
