Adding Admins & teachers by excel sheet

--- a/web-principal & Admin/addAdmin.html
+++ b/web-principal & Admin/addAdmin.html
@@ -21,7 +21,7 @@
   <form class="addAdmin" id="modal-signup">
    
   <div class="inputbox">
-      <input type="text" name ="firstName" id="firstName">
+      <input type="text" required="required" name ="firstName" id="firstName">
       <span>الاسم الأول</span>
     </div>
 
@@ -39,7 +39,6 @@
   <div class="inputbox">
     <span class="req">جميع الحقول مطلوبة*</span>
   </div>
-
 
 
     <div class="inputbox">
