addAdmin and addAdmins css

--- a/web-principal & Admin/addAdmin.html
+++ b/web-principal & Admin/addAdmin.html
@@ -37,7 +37,7 @@
     </div>
 
   <div class="inputbox">
-    <span class="req">جميع الحقول مطلوبة*</span>
+    <span  style="color: rgb(157, 48, 48);" class="req">جميع الحقول مطلوبة*</span>
   </div>
 
 
@@ -51,6 +51,14 @@
   </div>
 
   </form>
+</div>
+<div class="screen__background">
+  <div class="screen__background__shape screen__background__shape7"></div>
+  <div class="screen__background__shape screen__background__shape5"></div>
+  <div class="screen__background__shape screen__background__shape4"></div>
+  <div class="screen__background__shape screen__background__shape3"></div>		
+  <div class="screen__background__shape screen__background__shape2"></div>
+  <div class="screen__background__shape screen__background__shape1"></div>
 </div>
 
 
