--- a/web-principal & Admin/addStudent.html
+++ b/web-principal & Admin/addStudent.html
@@ -84,7 +84,9 @@
                 </div>
 
 
-
+                <div class="inputbox">
+                    <span style="color: rgb(157, 48, 48);" class="req">جميع الحقول مطلوبة*</span>
+                  </div>
        
             </div>
  
