template for excel

--- a/web-principal & Admin/AddAdminS.html
+++ b/web-principal & Admin/AddAdminS.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="create.css">
     <script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
     <script type="module" src="addAdmins.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>إضافة قائمة إداريون</title>
 </head>
 
@@ -21,6 +22,8 @@
             <div class="card-body">
                 <input type="file" id="excel_file" />
             </div>
+            <button style="width: 50%; margin-left:25% ; " onclick="window.location.href='https://docs.google.com/spreadsheets/d/1A3cA3xSH264LBHsqbNOztb2RCnpl8c95KsSG_0RUld8/edit#gid=948700460';"  style="font-size:24px">نموذج اضافة إدايين <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
+
         </div>
         <div id="excel_data" class="mt-5"></div>
         <div class="inputbox">
