Adding Admins & Teachers & indicate status

--- a/web-principal & Admin/AddAdminS.html
+++ b/web-principal & Admin/AddAdminS.html
@@ -18,11 +18,13 @@
 <div class="center">
         <h1 class="text-center mt-4 mb-4">إضافة قائمة من الإداريون</h1>
         <div class="card">
-            <div class="card-header"><b>اختر ملف اكسل</b></div>
+            <div class="card-header"><b>اختر ملف اكسل*</b></div>
             <div class="card-body">
                 <input type="file" id="excel_file" />
             </div>
-            <button style="width: 50%; margin-left:25% ; " onclick="window.location.href='https://docs.google.com/spreadsheets/d/1A3cA3xSH264LBHsqbNOztb2RCnpl8c95KsSG_0RUld8/edit#gid=948700460';"  style="font-size:24px">نموذج اضافة إدايين <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
+<br>
+<button style="width: 50%; margin-left:25% ; " onclick="window.location.href='https://docs.google.com/spreadsheets/d/18osytXSG1AwjaaLBmSVOOh6pvuT8rb3NNUj1qbCVm8U/edit#gid=1002424693';"  style="font-size:24px">نموذج اضافة طلاب <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
+<br>
 
         </div>
         <div id="excel_data" class="mt-5"></div>
