Adding Admins & Teacher Indicating Status

--- a/web-principal & Admin/addTeacherS.html
+++ b/web-principal & Admin/addTeacherS.html
@@ -23,7 +23,7 @@
                 <input type="file" id="excel_file" />
             </div>
 <br>
-<button style="width: 50%; margin-left:25% ; " onclick="window.location.href='https://docs.google.com/spreadsheets/d/18osytXSG1AwjaaLBmSVOOh6pvuT8rb3NNUj1qbCVm8U/edit#gid=1002424693';"  style="font-size:24px">نموذج اضافة طلاب <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
+<button style="width: 50%; margin-left:25% ; " onclick="window.location.href='https://docs.google.com/spreadsheets/d/18osytXSG1AwjaaLBmSVOOh6pvuT8rb3NNUj1qbCVm8U/edit#gid=1002424693';"  style="font-size:24px">نموذج  الإضافة <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
 <br>
 
         </div>
