--- a/web-principal & Admin/addStudents.html
+++ b/web-principal & Admin/addStudents.html
@@ -24,8 +24,8 @@
             <div class="card-body">
                 <input style="align-items: center ;" type="file" id="excel_file" />
             </div>
-            <button style="width: 50%; margin-left:25% ; " onclick="window.location.href='https://docs.google.com/spreadsheets/d/18osytXSG1AwjaaLBmSVOOh6pvuT8rb3NNUj1qbCVm8U/edit#gid=1002424693';"  style="font-size:24px">نموذج اضافة طلاب <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
-
+            <button style="width: 50%; margin-left:25% ; " onclick="window.location.href='https://docs.google.com/spreadsheets/d/18osytXSG1AwjaaLBmSVOOh6pvuT8rb3NNUj1qbCVm8U/edit#gid=1002424693';"  style="font-size:24px">نموذج الإضافة <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
+<br>
         </div>
         <div id="excel_data" class="mt-5"></div>
         <div class="inputbox">
