--- a/web-principal & Admin/register.html
+++ b/web-principal & Admin/register.html
@@ -161,6 +161,7 @@
             const errorCode = error.code;
             const errorMessage = error.message;
             console.log(errorMessage);
+            alert("حدث خطأ حاول مره أخرى");
             signForm.reset();
           });
 
