after structure change

--- a/web-principal & Admin/principalHomePage.html
+++ b/web-principal & Admin/principalHomePage.html
@@ -96,7 +96,7 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
                     <div class="section-title text-center ">
                     <h3 class="topTitle">قائمة الإداريين</h3>
 
-                        <button class="button-36 topTitle" onclick="location.href='addAdmin.php'"  >إضافة إداري</button>
+                        <button class="button-36 topTitle" onclick="location.href='addAdmin.html'"  >إضافة إداري</button>
                         <div class="loader topTitle"></div>
                        
                     </div>
