--- a/web-principal & Admin/index.html
+++ b/web-principal & Admin/index.html
@@ -53,7 +53,7 @@
         import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js";
         import { getFirestore } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-firestore.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-analytics.js";
-        import { collection, getDocs, addDoc, Timestamp, deleteDoc , getDoc, updateDoc  } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-firestore.js";
+        import { collection, getDocs, addDoc, Timestamp, deleteDoc , getDoc, updateDoc, collectionGroup  } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-firestore.js";
         import { query, orderBy, limit, where, onSnapshot } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-firestore.js";
         import { doc, setDoc } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-firestore.js";
         import { get, ref } from "https://www.gstatic.com/firebasejs/9.12.1//firebase-database.js";
@@ -105,8 +105,8 @@
             }
             
             if ((userType.value=="admin")){
-              const docSnap = await getDocs(query(collectionGroup(db, 'Admin'), where('Email', '==', aid)));
-              const querySnapshot = await getDocs(docSnap);
+              const docSnap = await getDocs(query(collectionGroup(db, 'Admin'), where('Email', '==', Email.value)));
+              const querySnapshot = await getDoc(docSnap);
               if(querySnapshot.empty){
                alert("لا يوجد إداري بهذه البيانات يرجى التحقق من البيانات المدخلة");
                logInform.reset();
