bug fix AddClass

--- a/web-principal & Admin/class.html
+++ b/web-principal & Admin/class.html
@@ -50,7 +50,7 @@
     <div class="center">
         <h1>إضافة فصل</h1>
 
-        <form onsubmit="return validateForm();" class="addClassForm">
+        <form class="addClassForm">
 
 
             <div class="inputbox">
