--- a/web-principal & Admin/addTeacherS.html
+++ b/web-principal & Admin/addTeacherS.html
@@ -42,11 +42,64 @@
     <script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
     <script type="module" src="addTeacherS.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="navbar.css"/>
+    <script src="navbar.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <style>
+        main {
+       margin: 0;
+       margin-top: 30px;
+       margin-bottom: 30px;
+       padding: 0;
+       box-sizing: border-box;
+       display:grid;
+       justify-content:center;
+       align-items: center;
+     }
+         </style>
     <title>إضافة قائمة معلمون</title>
 </head>
 
 <body>
 
+        <!--start of nav -->
+        <nav class="navbar navbar-expand-custom navbar-mainbg">
+            <a class="navbar-brand navbar-logo" href="#"><img src="navbarlogo.png" alt="logo" height="66"></a>
+            <svg viewBox="0 0 512 512" width="30" title="sign-out-alt" id ='signout'>
+      <path d="M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z" />
+    </svg>
+            <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars text-white"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="adminHomePage.php">الصفحة الرئيسية</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="students.php"> إصطحاب الطلاب</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:void(0);"></i>الإعلانات</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:void(0);">الأحداث</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:void(0);">المستندات</a>
+                    </li>
+    
+                </ul>
+            </div>
+        </nav>
+        <!--end of nav -->
+
+    <main>
 
 <div class="center">
         <h1 class="text-center mt-4 mb-4">إضافة قائمة من المعلمون</h1>
@@ -56,7 +109,7 @@
                 <input type="file" id="excel_file" />
             </div>
 <br>
-<button style="width: 50%; margin-left:25% ; " onclick="window.location.href='https://docs.google.com/spreadsheets/d/18osytXSG1AwjaaLBmSVOOh6pvuT8rb3NNUj1qbCVm8U/edit#gid=1002424693';"  style="font-size:24px">نموذج  الإضافة <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
+<button style="width: 50%; margin-left:25% ; "  onclick="window.location.href='https://docs.google.com/spreadsheets/d/1hoGGnRVOkeyKilJMBGdQ9FFHBro6YAwOfctnO0QGbEE/edit#gid=1300969599'"  style="font-size:24px">نموذج الإضافة <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
 <br>
 
         </div>
@@ -75,7 +128,7 @@
         <div class="screen__background__shape screen__background__shape2"></div>
         <div class="screen__background__shape screen__background__shape1"></div>
       </div>
-
+    </main>
       <style>
         .screen__background__shape {
 	transform: rotate(45deg);
