--- a/web-principal & Admin/register.html
+++ b/web-principal & Admin/register.html
@@ -18,6 +18,10 @@
     <h1>سجل مدرستك في حلقة</h1>
     <form id="signForm">
       <div class="inputbox">
+        <span class="req" style="color: red;">جميع الحقول مطلوبة*</span>
+      </div>
+
+      <div class="inputbox">
         <input type="text" required="required" id="snameInp">
         <span>اسم المدرسة </span>
       </div>
@@ -36,8 +40,12 @@
       </div>
       <div class="inputbox">
         <input type="password" required="required" id="passInp">
-        <span>كلمة السر</span>
+        <span>كلمة المرور</span>
       </div>
+      <div class="inputbox">
+        <span class="req" style="color: red;">كلمة المرور يجب أن تكون أكثر من ٦ أحرف و/أو أرقام*</span>
+      </div>
+      
 
       <div class="inputbox">
         <button type="text" id="subButton" class="btn" type="button">تسجيل</button>
