--- a/web-principal & Admin/resetPassword.html
+++ b/web-principal & Admin/resetPassword.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إعادة تعيين كلمة السر</title>
+    <title>إعادة تعيين كلمة المرور</title>
     <link href="register.css" rel="stylesheet" >
 
 </head>
 <body>
     <div class="center">
-        <h1 class=""> إعادة تعيين كلمة السر</h1>
+        <h1 class=""> إعادة تعيين كلمة المرور</h1>
         <form id="reset">
          
             
