--- a/web-principal & Admin/editAdmin.html
+++ b/web-principal & Admin/editAdmin.html
@@ -8,6 +8,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="adminEdit.js"></script>
 <link href="register.css" rel="stylesheet" >
 <title>معلومات الحساب</title>
 </head>
