--- a/web-principal & Admin/principalHomePage.html
+++ b/web-principal & Admin/principalHomePage.html
@@ -94,7 +94,13 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
                     <div class="section-title text-center ">
                     <h3 class="topTitle">قائمة الإداريين</h3>
 
-                        <button class="button-36 topTitle" onclick="location.href='addAdmin.html'"  >إضافة إداري</button>
+                    <div class="dropdownw3c topTitle" >
+                        <button class="dropbtn" style="width:28rem;">إضافة الإداريين</button>
+                        <div class="dropdown-contentw3c" style="width:28rem;">
+                        <a href="addTeacher.html">إضافة إداري</a>
+                        <a href="addTeacherS.html">إضافة إداريين</a>
+                        </div>
+                      </div>
                         <div class="loader topTitle"></div>
                        
                     </div>
