--- a/web-principal & Admin/addTeacher.html
+++ b/web-principal & Admin/addTeacher.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script type="module">
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js";
      const auth = getAuth();
