--- a/web-principal & Admin/addStudents.html
+++ b/web-principal & Admin/addStudents.html
@@ -106,14 +106,15 @@
 
 
 <script type="module">
+    import{school_ID} from './addStudents.js';
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js";
      const auth = getAuth();
      const user= auth.currentUser
         onAuthStateChanged(auth, (user)=>{
             if(user){
-                alert("jjjj")
+
                 console.log("the same user");
-                document.getElementsByTagName('body').onload = SchoolID(user.email);
+                document.getElementsByTagName('body').onload = school_ID(user.email);
 
             }
             else{
