level added to student excel and class validation

--- a/web-principal & Admin/AddAdminS.html
+++ b/web-principal & Admin/AddAdminS.html
@@ -79,7 +79,7 @@
                 <ul class="navbar-nav ml-auto">
                     <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
                     <li class="nav-item active">
-                        <a class="nav-link" href="adminHomePage.php">الصفحة الرئيسية</a>
+                        <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="students.php"> إصطحاب الطلاب</a>
@@ -109,7 +109,7 @@
                 <input type="file" id="excel_file" />
             </div>
 <br>
-<button style="width: 50%; margin-left:25% ; " onclick="window.location.href='https://docs.google.com/spreadsheets/d/1A3cA3xSH264LBHsqbNOztb2RCnpl8c95KsSG_0RUld8/edit#gid=948700460'"  style="font-size:24px">نموذج الإضافة <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
+<button style="width: 50%; margin-left:25% ; border-radius: 60px; " onclick="window.location.href='https://docs.google.com/spreadsheets/d/1A3cA3xSH264LBHsqbNOztb2RCnpl8c95KsSG_0RUld8/edit#gid=948700460'"  style="font-size:24px">نموذج الإضافة <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
 <br>
 
         </div>
