--- a/web-principal & Admin/addStudents.html
+++ b/web-principal & Admin/addStudents.html
@@ -51,8 +51,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
-                <li class="nav-item active">
-                    <a class="nav-link" href="adminHomePage.php">الصفحة الرئيسية</a>
+                <li class="nav-item ">
+                    <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="students.php"> إصطحاب الطلاب</a>
@@ -75,7 +75,7 @@
     <main>
 
 <!-- add StudentS -->
-<main>
+
 <div class="center">
         <h1 class="text-center mt-4 mb-4">إضافة قائمة طلاب</h1>
         <div class="card">
@@ -83,7 +83,7 @@
             <div class="card-body">
                 <input style="align-items: center ;" type="file" id="excel_file" />
             </div>
-            <button style="width: 50%; margin-left:25% ; " onclick="window.location.href='https://docs.google.com/spreadsheets/d/18osytXSG1AwjaaLBmSVOOh6pvuT8rb3NNUj1qbCVm8U/edit#gid=1002424693';"  style="font-size:24px">نموذج الإضافة <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
+            <button style="width: 50%; margin-left:25%;  border-radius: 60px; " onclick="window.location.href='https://docs.google.com/spreadsheets/d/18osytXSG1AwjaaLBmSVOOh6pvuT8rb3NNUj1qbCVm8U/edit#gid=1002424693';"  style="font-size:24px">نموذج الإضافة <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
 <br>
         </div>
         <div id="excel_data" class="mt-5"></div>
@@ -93,7 +93,7 @@
 
     </div>
     </div>
-    </main>
+   
     <div class="screen__background">
         <div class="screen__background__shape screen__background__shape7"></div>
         <div class="screen__background__shape screen__background__shape5"></div>
