--- a/web-principal & Admin/addTeacherS.html
+++ b/web-principal & Admin/addTeacherS.html
@@ -110,7 +110,7 @@
                 <input type="file" id="excel_file" />
             </div>
 <br>
-<button style="width: 50%; margin-left:25% ; "  onclick="window.location.href='https://docs.google.com/spreadsheets/d/1hoGGnRVOkeyKilJMBGdQ9FFHBro6YAwOfctnO0QGbEE/edit#gid=1300969599'"  style="font-size:24px">نموذج الإضافة <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
+<button style="width: 50%; margin-left:25% ; border-radius: 60px;"  onclick="window.location.href='https://docs.google.com/spreadsheets/d/1hoGGnRVOkeyKilJMBGdQ9FFHBro6YAwOfctnO0QGbEE/edit#gid=1300969599'"  style="font-size:24px">نموذج الإضافة <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
 <br>
 
         </div>
