--- a/web-principal & Admin/editPrincipal.html
+++ b/web-principal & Admin/editPrincipal.html
@@ -95,7 +95,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                
+                <div class="hori-selector" style="background-color: white;"><div class="left" style="background-color: white;"></div><div class="right" style="background-color: white;"></div></div>
+                <li class="nav-item active">
+                    <a class="nav-link" href="javascript:void(0);"></a>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
                 </li>
