--- a/web-principal & Admin/addAdmin.html
+++ b/web-principal & Admin/addAdmin.html
@@ -14,16 +14,16 @@
        const logout= document.getElementById("signout");
    
        logout.addEventListener('click',  async (e) => {
-         alert("lohhh");
-         e.preventDefault()
-         signOut(auth).then(() => {
-           alert("تم تسجيل الخروج بنجاح");
-           window.location.href="index.html";
-           }).catch((error) => {
-           console.log(error.message);
-           }); 
-   
-        }) 
+      e.preventDefault()
+      if(confirm("هل تُأكد تسجيل الخروج من الحساب؟")){
+      signOut(auth).then(() => {
+        alert("تم تسجيل الخروج بنجاح");
+        window.location.href="index.html";
+        }).catch((error) => {
+        console.log(error.message);
+        }); 
+    }
+     }); 
    </script>
 
     <meta charset="UTF-8">
@@ -84,21 +84,10 @@
             </li>
 
               <li class="nav-item active">
-                  <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
+                  <a class="nav-link" href="principalHomePage.html">الصفحة الرئيسية</a>
               </li>
            
-              <li class="nav-item ">
-                  <a class="nav-link" href="javascript:void(0);"> إصطحاب الطلاب</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0);"></i>الإعلانات</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0);">الأحداث</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0);">المستندات</a>
-              </li>
+        
 
           </ul>
       </div>
