--- a/web-principal & Admin/adminHomePage.html
+++ b/web-principal & Admin/adminHomePage.html
@@ -18,18 +18,19 @@ import { getAuth, onAuthStateChanged,signOut } from "https://www.gstatic.com/fir
             console.log("the  user changed");
         }
     });
-
-
     const logout= document.getElementById("signout");
+
+
     logout.addEventListener('click',  async (e) => {
       e.preventDefault()
+      if(confirm("هل تُأكد تسجيل الخروج من الحساب؟")){
       signOut(auth).then(() => {
         alert("تم تسجيل الخروج بنجاح");
         window.location.href="index.html";
         }).catch((error) => {
         console.log(error.message);
         }); 
-
+    }
      }); 
    
    </script>
