--- a/web-principal & Admin/principalHomePage.html
+++ b/web-principal & Admin/principalHomePage.html
@@ -23,13 +23,14 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
 
     logout.addEventListener('click',  async (e) => {
       e.preventDefault()
+      if(confirm("هل تُأكد تسجيل الخروج من الحساب؟")){
       signOut(auth).then(() => {
         alert("تم تسجيل الخروج بنجاح");
         window.location.href="index.html";
         }).catch((error) => {
         console.log(error.message);
         }); 
-
+    }
      }); 
 </script>
 
@@ -101,7 +102,7 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
                         <a href="AddAdminS.html">إضافة إداريين</a>
                         </div>
                       </div>
-                        <div class="loader topTitle"></div>
+                        <div class="loader topTitle" style="top: 20em;"></div>
                        
                     </div>
                 </div>
