--- a/web-principal & Admin/students.html
+++ b/web-principal & Admin/students.html
@@ -21,17 +21,17 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
     })
     const logout= document.getElementById("signout");
 
-logout.addEventListener('click',  async (e) => {
-  alert("lohhh");
-  e.preventDefault()
-  signOut(auth).then(() => {
-    alert("تم تسجيل الخروج بنجاح");
-    window.location.href="index.html";
-    }).catch((error) => {
-    console.log(error.message);
-    }); 
-
- }) 
+    logout.addEventListener('click',  async (e) => {
+      e.preventDefault()
+      if(confirm("هل تُأكد تسجيل الخروج من الحساب؟")){
+      signOut(auth).then(() => {
+        alert("تم تسجيل الخروج بنجاح");
+        window.location.href="index.html";
+        }).catch((error) => {
+        console.log(error.message);
+        }); 
+    }
+     }); 
 </script>
  
 <html lang="en">
@@ -47,7 +47,6 @@ logout.addEventListener('click',  async (e) => {
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css" integrity="sha256-3sPp8BkKUE7QyPSl6VfBByBroQbKxKG7tsusY2mhbVY=" crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <link href="students.css" rel="stylesheet">
@@ -106,8 +105,18 @@ logout.addEventListener('click',  async (e) => {
 
     <!--end of breadcrumb-->
 
-<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-<hr>
+
+    <div class="row">
+        <div class="col-lg-10 mx-auto mb-4">
+           <div class="section-title text-center ">
+           <h3 class="topTitle" id="className" style="margin-top:5%;"></h3>
+
+   
+              
+           </div>
+       </div>
+   </div>
+
 <div class="container bootstrap snippets bootdey">
 
     <div class="row">
