--- a/web-principal & Admin/register.html
+++ b/web-principal & Admin/register.html
@@ -44,6 +44,11 @@
         <span>كلمة المرور</span>
       </div>
       <div class="inputbox">
+
+        <input type="checkbox"  name="show" onclick="myFunction()">  
+        <label for="show">إظهار كلمة المرور </label>
+      </div>
+      <div class="inputbox">
         <span class="req" style="color: red;">كلمة المرور يجب أن تكون أكثر من ٦ أحرف و/أو أرقام*</span>
       </div>
       
