--- a/web-principal & Admin/index.html
+++ b/web-principal & Admin/index.html
@@ -156,7 +156,7 @@
         
            })
         .catch((error) =>{
-          if(error.message=="Error (auth/wrong-password)"){
+          if(error.message=="Firebase: Error (auth/wrong-password)."){
             $('.loader').hide();
 
             alert("هناك خطأ في البريد الإلكتروني أو كلمة المرور ");
