--- a/web-principal & Admin/register.html
+++ b/web-principal & Admin/register.html
@@ -45,8 +45,8 @@
       </div>
       <div class="inputbox">
 
-        <input type="checkbox"  name="show" onclick="myFunction()">  
-        <label for="show">إظهار كلمة المرور </label>
+        <input type="checkbox"  name="show" onclick="myFunction()" style="margin-left:100% ;">  
+         <h6 style="margin-left:79%; font-size: 9px;">إظهار كلمة المرور </h6>
       </div>
       <div class="inputbox">
         <span class="req" style="color: red;">كلمة المرور يجب أن تكون أكثر من ٦ أحرف و/أو أرقام*</span>
@@ -238,6 +238,17 @@
     }
 
   </script>
+
+<script>
+  function myFunction() {
+   var x = document.getElementById("passInp");
+   if (x.type === "password") {
+     x.type = "text";
+   } else {
+     x.type = "password";
+   }
+ }
+ </script>
 
 
 
