--- a/web-principal & Admin/resetPassword.html
+++ b/web-principal & Admin/resetPassword.html
@@ -62,6 +62,7 @@
          .then(() => {
            alert("تم إرسال بريد إلكتروني لإعادة تعيين كلمة المرور");
            resetForm.reset();
+           window.location.href= "index.html";
 
           })
           .catch((error) => {
