--- a/web-principal & Admin/addAdmin.html
+++ b/web-principal & Admin/addAdmin.html
@@ -64,6 +64,7 @@
 
 
 <body>
+  
     <!--start of nav -->
     <nav class="navbar navbar-expand-custom navbar-mainbg">
       <a class="navbar-brand navbar-logo" href="#"><img src="navbarlogo.png" alt="logo" height="66"></a>
@@ -79,27 +80,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <div class="hori-selector" style="background-color: white;"><div class="left" style="background-color: white;"></div><div class="right" style="background-color: white;"></div></div>
-            <li class="nav-item active">
-                <a class="nav-link" href="javascript:void(0);"></a>
-            </li>
+              <div class="hori-selector" style="background-color: white;"><div class="left" style="background-color: white;"></div><div class="right" style="background-color: white;"></div></div>
+              <li class="nav-item active">
+                  <a class="nav-link" href="javascript:void(0);"></a>
+              </li>
 
               <li class="nav-item ">
-                  <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
+                  <a class="nav-link" href="principalHomePage.html">الصفحة الرئيسية</a>
               </li>
            
-              <li class="nav-item ">
-                  <a class="nav-link" href="javascript:void(0);"> إصطحاب الطلاب</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0);"></i>الإعلانات</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0);">الأحداث</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0);">المستندات</a>
-              </li>
 
           </ul>
       </div>
